[project]
name = "ha-gridboss"
version = "0.1.0"
description = "EG4 GridBoss Integration (Unofficial)"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant>=2025.9.0",
    "aiohttp>=3.12.15",
]
authors = [
    { name = "Jason Kohles", email = "email@jasonkohles.com" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridboss"]


[tool.pytest.ini_options]
pythonpath = [ "src" ]
addopts = [
#   "-Wall",
#   "-rsxvv",
    "--import-mode=importlib",
]
markers = []
#junit_family = "xunit2"
asyncio_mode = "auto"
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "testing_config",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    "if TYPE_CHECKING:",
    "pragma: no cover",
]
skip_covered = true
skip_empty = true
ignore_errors = true
format = "markdown"
include_namespace_packages = true
sort = "-cover"

[tool.coverage.paths]
source = [
    "src/gridboss/",
]
[tool.coverage.html]
directory = "coverage_html_report"
skip_covered = false

[tool.coverage.json]
pretty_print = true


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
ignore = []
stubPath = "../../typings"
# strict = ["**/*.py"]

#include = [ "gridboss", "tests" ]
#ignore = [ "scripts", "examples" ]
#reportMissingImports = false
#reportTypedDictNotRequiredAccess = false
#reportCallInDefaultInitializer = true
#reportOptionalSubscript = false
#reportUnboundVariable = false
#strictParameterNoneValue = false
#reportIncompatibleMethodOverride = false

#defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = true
reportPrivateUsage = "none"
reportUnknownVariableType = false

#executionEnvironments = [
#  {
#    root = "src/web",
#    pythonVersion = "3.5",
#    pythonPlatform = "Windows",
#    extraPaths = [ "src/service_libs" ],
#    reportMissingImports = "warning",
#  },
#  { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#  { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#  { root = "src" }
#]
venvPath = "../.."
venv = ".venv"

[tool.poe.tasks]
'lint:ruff' = 'ruff check ${PWD}'
'lint:pylint' = 'pylint ${PWD}'
'lint:mypy' = 'mypy ${PWD}'
'lint:pyright' = 'basedpyright ${PWD}'
'lint:bandit' = 'bandit -c pyproject.toml -r ${PWD}'
lint = [
  {ref="lint:ruff"},
  {ref="lint:pylint"},
  {ref="lint:mypy"},
  {ref="lint:pyright"},
  {ref="lint:bandit"},
]
'ci:lint' = [
  {ref="lint:ruff"},
  {ref="lint:pylint"},
  {ref="lint:mypy"},
  {ref="lint:pyright"},
  {ref="lint:bandit"},
]
'test:pytest' = "pytest ${PWD}"
test = [
  {ref="test:pytest"},
]
'ci:test' = [
  {ref="test:pytest"},
]
# run all the above
all = [
  {ref="lint"},
  {ref="test"},
]
echo = "echo ${PWD}"


[tool.bandit]
skips = ["B101"]

[tool.mypy]
plugins = []
# ignore_missing_imports = true

follow_imports = 'silent'
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = false # for strict mypy

disable_error_code = [
  'type-abstract', # https://github.com/python/mypy/issues/4717
]

[tool.isort]
profile = "black"
known_first_party = [ "gridboss", "tests" ]
force_sort_within_sections = true
forced_separate = [ "tests" ]
combine_as_imports = true
line_length = 70
wrap_length = 70
include_trailing_comma = true
add_imports = [ 'from __future__ import annotations' ]
append_only = true

[tool.pylint."MESSAGES CONTROL"]
ignore = [ '_version.py' ]
ignore-paths = [ '.*/_.*.py$' ]
allowed-redefined-builtins = [ 'id' ]

# Only show warnings with the listed confidence levels. Leave empty to
# show all. Valid levels: HIGH, INFERENCE, INFERENCE_FAILURE,
# UNDEFINED.
# confidence=

# Disable the message, report, category or checker with the given
# id(s). You can either give multiple identifiers separated by comma
# (,) or put this option multiple times (only on the command line, not
# in the configuration file where it should appear only once). You can
# also use "--disable=all" to disable everything first and then
# reenable specific checks. For example, if you want to run only the
# similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker,
# but have no Warning level messages displayed, use "--disable=all
# --enable=classes --disable=W".
disable = [
  # 'invalid-name',
  # 'missing-docstring',
  'protected-access',
  'arguments-renamed',
  'cyclic-import',
  'duplicate-code',
  'empty-docstring',
  'fixme',
  'locally-disabled',
  'missing-class-docstring',
  'missing-function-docstring',
  'missing-module-docstring',
  'multiple-statements',
  'suppressed-message',
  'too-few-public-methods',
  'too-many-ancestors',
  'too-many-arguments',
  'too-many-instance-attributes',
  'too-many-public-methods',
  'wrong-import-order',
  'wrong-import-position',
  'file-ignored',
  'unspecified-encoding',
  'R0801',
  'R0401',
  'W0511',
  'pointless-string-statement',
  'not-callable',
]

# Enable the message, report, category or checker with the given
# id(s). You can either give multiple identifier separated by comma
# (,) or put this option multiple time (only on the command line, not
# in the configuration file where it should appear only once). See
# also the "--disable" option for examples.
enable=[
  'c-extension-no-member',
]


[tool.pylint.MASTER]
# A comma-separated list of package or module names from where
# C extensions may be loaded. Extensions are loading into the active
# Python interpreter and may run arbitrary code.
extension-pkg-allow-list=[]

# Return non-zero exit code if any of these messages/categories are
# detected, even if score is above --fail-under value. Syntax same as
# enable. Messages specified are enabled, while categories only check
# already-enabled messages.
fail-on=[]

# Specify a score threshold to be exceeded before program exits with
# error.
fail-under=10.0

# Files or directories to be skipped. They should be base names, not
# paths.
ignore=['CVS', '.git']

# Add files or directories matching the regex patterns to the
# ignore-list. The regex matches against paths and can be in Posix or
# Windows format.
ignore-paths=[]

# Files or directories matching the regex patterns are skipped. The
# regex matches against base names, not paths.
ignore-patterns=[]

# Python code to execute, usually for sys.path manipulation such as
# pygtk.require().
# init-hook='from pylint.config.find_default_config_files import find_default_config_files; from pathlib import Path; import sys; sys.path.append(str(Path(Path(list(find_default_config_files())[0]).parent, "pylint/plugins")))'

# Use multiple processes to speed up Pylint. Specifying 0 will
# auto-detect the number of processors available to use.
jobs=0

# Control the amount of potential inferred values when inferring
# a single object. This can help the performance when dealing with
# large functions or complex, nested conditions.
limit-inference-results=100

# List of plugins (as comma separated values of python module names)
# to load, usually to register additional checkers.
load-plugins=[]

# Pickle collected data for later comparisons.
persistent=true

# When enabled, pylint would attempt to guess common misconfiguration
# and emit user-friendly hints instead of false-positive error
# messages.
suggestion-mode=true

# Allow loading of arbitrary C extensions. Extensions are imported
# into the active Python interpreter and may run arbitrary code.
unsafe-load-any-extension=false

[tool.pylint.BASIC]
# Naming style matching correct argument names.
argument-naming-style='snake_case'

# Regular expression matching correct argument names. Overrides argument-
# naming-style.
#argument-rgx=

# Naming style matching correct attribute names.
attr-naming-style='snake_case'

# Regular expression matching correct attribute names. Overrides attr-naming-
# style.
#attr-rgx=

# Bad variable names which should always be refused, separated by a comma.
bad-names=[
  'foo',
  'bar',
  'baz',
]

# Bad variable names regexes, separated by a comma. If names match any regex,
# they will always be refused
bad-names-rgxs=[]

# Naming style matching correct class attribute names.
class-attribute-naming-style='any'

# Regular expression matching correct class attribute names. Overrides class-
# attribute-naming-style.
#class-attribute-rgx=

# Naming style matching correct class constant names.
class-const-naming-style='UPPER_CASE'
# class-const-naming-style = 'any'

# Regular expression matching correct class constant names. Overrides class-
# const-naming-style.
#class-const-rgx=

# Naming style matching correct class names.
class-naming-style='PascalCase'

# Regular expression matching correct class names. Overrides class-naming-
# style.
#class-rgx=

# Naming style matching correct constant names.
const-naming-style='UPPER_CASE'

# Regular expression matching correct constant names. Overrides const-naming-
# style.
#const-rgx=

# Minimum line length for functions/classes that require docstrings, shorter
# ones are exempt.
docstring-min-length=-1

# Naming style matching correct function names.
function-naming-style='snake_case'

# Regular expression matching correct function names. Overrides function-
# naming-style.
#function-rgx=

# Good variable names which should always be accepted, separated by a comma.
good-names=[
  'i',
  'j',
  'k',
  'ex',
  'Run',
  '_',
  'ev',
]

# Good variable names regexes, separated by a comma. If names match any regex,
# they will always be accepted
good-names-rgxs=[]

# Include a hint for the correct naming format with invalid-name.
include-naming-hint=false

# Naming style matching correct inline iteration names.
inlinevar-naming-style='any'

# Regular expression matching correct inline iteration names. Overrides
# inlinevar-naming-style.
#inlinevar-rgx=

# Naming style matching correct method names.
method-naming-style='snake_case'

# Regular expression matching correct method names. Overrides method-naming-
# style.
#method-rgx=

# Naming style matching correct module names.
module-naming-style='snake_case'

# Regular expression matching correct module names. Overrides module-naming-
# style.
#module-rgx=

# Colon-delimited sets of names that determine each other's naming style when
# the name regexes allow several styles.
name-group=[]

# Regular expression which should only match function or class names that do
# not require a docstring.
no-docstring-rgx='^_'

# List of decorators that produce properties, such as abc.abstractproperty. Add
# to this list to register other decorators that produce valid properties.
# These decorators are taken in consideration only for invalid-name.
property-classes=[
  'abc.abstractproperty',
]

# Naming style matching correct variable names.
variable-naming-style='snake_case'

# Regular expression matching correct variable names. Overrides variable-
# naming-style.
#variable-rgx=

[tool.pylint.REPORTS]
# Python expression which should return a score less than or equal to
# 10. You have access to the variables 'error', 'warning', 'refactor',
# and 'convention' which contain the number of messages in each
# category, as well as 'statement' which is the total number of
# statements analyzed. This score is used by the global evaluation
# report (RP0004).
evaluation='10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)'

# Template used to display messages. This is a python new-style format
# string used to format the message information. See doc for all
# details.
#msg-template=

# Set the output format. Available formats are text, parseable,
# colorized, json and msvs (visual studio). You can also give
# a reporter class, e.g.  mypackage.mymodule.MyReporterClass.
output-format='text'

# Tells whether to display a full report or only the messages.
reports=false

# Activate the evaluation score.
score=true

[tool.pylint.TYPECHECK]
# Regex pattern to define which classes are considered mixins if
# ignore-mixin- members is set to 'true'
#mixin-class-rgx=.*MixIn

# List of module names for which member attributes should not be
# checked (useful for modules/projects where namespaces are
# manipulated during runtime and thus existing member attributes
# cannot be deduced by static analysis). It supports qualified module
# names, as well as Unix pattern matching.
#ignored-modules=[]

# List of class names for which member attributes should not be
# checked (useful for classes with dynamically set attributes). This
# supports the use of qualified names.
ignored-classes = [
    "_CountingAttr",  # for attrs
    "SQLObject",
    "optparse.Values",
    "thread._local",
    "_thread._local",
]

# List of decorators that produce context managers, such as
# contextlib.contextmanager. Add to this list to register other
# decorators that produce valid context managers.
contextmanager-decorators = [
  'contextlib.contextmanager',
]

# List of members which are set dynamically and missed by pylint
# inference system, and so shouldn't trigger E1101 when accessed.
# Python regular expressions are accepted.
generated-members = [
  'REQUEST',
  'argparse.Namespace',
]

# Tells whether missing members accessed in mixin class should be
# ignored. A class is considered mixin if its name matches the
# mixin-class-rgx option.
ignore-mixin-members=true

# Tells whether to warn about missing members when the owner of the
# attribute is inferred to be None.
ignore-none=true

# This flag controls whether pylint should warn about no-member and
# similar checks whenever an opaque object is returned when inferring.
# The inference can return multiple potential results while evaluating
# a Python object, but some branches might not be evaluated, which
# results in partial inference. In that case, it might be useful to
# still emit no-member and other checks for the rest of the inferred
# objects.
ignore-on-opaque-inference=true

# Show a hint with possible names when a member name was not found.
# The aspect of finding the hint is based on edit distance.
missing-member-hint=true

# The minimum edit distance a name should have in order to be
# considered a similar match for a missing member name.
missing-member-hint-distance=1

# The total number of similar names that should be taken in
# consideration when showing a hint for a missing member.
missing-member-max-choices=1

# Regex pattern to define which classes are considered mixins
# ignore-mixin-members is set to 'true'
mixin-class-rgx='.*[Mm]ixin'

# List of decorators that change the signature of a decorated function.
signature-mutators=[]



[tool.pylint.FORMAT]
# Expected format of line ending, e.g. empty (any line ending), LF or CRLF.
expected-line-ending-format = "LF"

# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines='^\s*(# )?<?https?://\S+>?$'

# Number of spaces of indent required inside a hanging or continued line.
indent-after-paren=4

# String used as indentation unit. This is usually "    " (4 spaces) or "\t" (1
# tab).
indent-string='    '

# Maximum number of characters on a single line.
max-line-length = 80

# Maximum number of lines in a module.
max-module-lines=1000

# Allow the body of a class to be on the same line as the declaration if body
# contains single statement.
single-line-class-stmt=true

# Allow the body of an if to be on the same line as the test if there is no
# else.
single-line-if-stmt=true

[tool.pylint.EXCEPTIONS]
# Exceptions that will emit a warning when being caught. Defaults to
# "BaseException, Exception".
overgeneral-exceptions = [
    "builtin.BaseException",
    "builtin.Exception",
]

[tool.pylint.REFACTORING]

# Maximum number of nested blocks for function / method body
max-nested-blocks=5

# Complete name of functions that never returns. When checking for
# inconsistent-return-statements if a never returning function is
# called then it will be considered as an explicit return statement
# and no message will be printed.
never-returning-functions=[
  'sys.exit',
  'argparse.parse_error',
]

[tool.pylint.LOGGING]
# The type of string formatting that logging methods do. `old` means
# using % formatting, `new` is for `{}` formatting.
logging-format-style='old'

# Logging modules to check that the string format arguments are in
# logging function parameter format.
logging-modules='logging'

[tool.pylint.SPELLING]
# Limits count of emitted suggestions for spelling mistakes.
max-spelling-suggestions=4

# Spelling dictionary name. Available dictionaries: none. To make it
# work, install the 'python-enchant' package.
#spelling-dict=

# List of comma separated words that should be considered directives
# if they appear and the beginning of a comment and should not be
# checked.
spelling-ignore-comment-directives=[
  'fmt: on',
  'fmt: off',
  'noqa:',
  'noqa',
  'nosec',
  'isort:skip',
  'mypy:',
]

# List of comma separated words that should not be checked.
spelling-ignore-words=[]

# A path to a file that contains the private dictionary; one word per line.
#spelling-private-dict-file=

# Tells whether to store unknown words to the private dictionary (see
# the --spelling-private-dict-file option) instead of raising
# a message.
spelling-store-unknown-words=false

[tool.pylint.MISCELLANEOUS]
# List of note tags to take in consideration, separated by a comma.
notes=['FIXME','XXX','TODO']

# Regular expression of note tags to take in consideration.
#notes-rgx=


[tool.pylint.VARIABLES]
# List of additional names supposed to be defined in builtins.
# Remember that you should avoid defining new builtins when possible.
additional-builtins=[]

# Tells whether unused global variables should be treated as
# a violation.
allow-global-unused-variables=true

# List of names allowed to shadow builtins
allowed-redefined-builtins=['id']

# List of strings which can identify a callback function by name.
# A callback name must start or end with one of those strings.
callbacks=['cb_','_cb']

# A regular expression matching the name of dummy variables (i.e.
# expected to not be used).
dummy-variables-rgx='(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_'

# Argument names that match this expression will be ignored. Default
# to name with leading underscore.
ignored-argument-names='_.*|^ignored_|^unused_'

# Tells whether we should check for unused import in __init__ files.
init-import=true

# List of qualified module names which can have objects that can
# redefine builtins.
redefining-builtins-modules=[
  'six.moves',
  'past.builtins',
  'future.builtins',
  'builtins',
  'io',
]

[tool.pylint.SIMILARITIES]
# Comments are removed from the similarity computation
ignore-comments=true

# Docstrings are removed from the similarity computation
ignore-docstrings=true

# Imports are removed from the similarity computation
ignore-imports=false

# Signatures are removed from the similarity computation
ignore-signatures=false

# Minimum lines number of a similarity.
min-similarity-lines=4

[tool.pylint.STRING]
# This flag controls whether inconsistent-quotes generates a warning when the
# character used as a quote delimiter is used inconsistently within a module.
check-quote-consistency=false

# This flag controls whether the implicit-str-concat should generate a warning
# on implicit string concatenation in sequences defined over several lines.
check-str-concat-over-line-jumps=false

[tool.pylint.IMPORTS]
# List of modules that can be imported at any level, not just the top level
# one.
allow-any-import-level=[]

# Allow wildcard imports from modules that define __all__.
allow-wildcard-with-all=false

# Analyse import fallback blocks. This can be used to support both
# Python 2 and 3 compatible code, which means that the block might
# have code that exists only in one or another interpreter, leading to
# false positives when analysed.
analyse-fallback-blocks=false

# Deprecated modules which should not be used, separated by a comma.
deprecated-modules=[]

# Output a graph (.gv or any supported image format) of external
# dependencies to the given file (report RP0402 must not be disabled).
#ext-import-graph=

# Output a graph (.gv or any supported image format) of all (i.e.
# internal and external) dependencies to the given file (report RP0402
# must not be disabled).
#import-graph=

# Output a graph (.gv or any supported image format) of internal
# dependencies to the given file (report RP0402 must not be disabled).
#int-import-graph=

# Force import order to recognize a module as part of the standard
# compatibility libraries.
known-standard-library=[]

# Force import order to recognize a module as part of a third party library.
known-third-party=[]

# Couples of modules and preferred modules, separated by a comma.
preferred-modules=[]

[tool.pylint.CLASSES]
# Warn about protected attribute access inside special methods
check-protected-access-in-special-methods=false

# List of method names used to declare (i.e. assign) instance attributes.
defining-attr-methods=[
  '__init__',
  '__new__',
  '__post_init__',
]

# List of member names, which should be excluded from the protected
# access warning.
exclude-protected=[
  '_asdict',
  '_fields',
  '_replace',
  '_source',
  '_make',
]

# List of valid names for the first argument in a class method.
valid-classmethod-first-arg=['cls']

# List of valid names for the first argument in a metaclass class method.
valid-metaclass-classmethod-first-arg=['mcs']

[tool.pylint.DESIGN]
# List of regular expressions of class ancestor names to ignore when counting
# public methods (see R0903)
exclude-too-few-public-methods=[]

# List of qualified class names to ignore when counting class parents (see
# R0901)
ignored-parents=[]

# Maximum number of arguments for function / method.
max-args=20

# Maximum number of attributes for a class (see R0902).
max-attributes=50

# Maximum number of boolean expressions in an if statement (see R0916).
max-bool-expr=5

# Maximum number of branch for function / method body.
max-branches=12

# Maximum number of locals for function / method body.
max-locals=25

# Maximum number of parents for a class (see R0901).
max-parents=7

# Maximum number of public methods for a class (see R0904).
max-public-methods=50

# Maximum number of return / yield for function / method body.
max-returns=6

# Maximum number of statements in function / method body.
max-statements=50
# Minimum number of public methods for a class (see R0903).
min-public-methods=0
max-positional-arguments=20

[tool.pylint."*.pyi"]
# workaround for https://github.com/pylint-dev/pylint/issues/9096
disable=[
    'invalid-name',
    'super-init-not-called',
    'unused-argument',
    'redefined-builtin',
]



#[tool.interrogate]
#fail-under = 100
#exclude    = ["dist"]
#
#[tool.tox]
#legacy_tox_ini = """
#[tox]
#    isolated_build = true
#    envlist = py, style
#
#
#    [testenv]
#    deps =
#        pytest
#        pytest-cov
#    commands =
#        {envpython} -m pytest --cov=data_repos --cov-fail-under=100 --cov-report=t#erm-missing
#
#
#    [testenv:style]
#    skip_install = true
#    deps = 
#        black
#        ruff
#        interrogate
#        isort
#    commands =
#        {envpython} -m black --check --quiet data_repos/ tests/
#        {envpython} -m ruff check data_repos/ tests/
#        {envpython} -m interrogate --quiet --config=pyproject.toml
#        {envpython} -m isort --check data_repos/ tests/
#"""
#

#[project.urls]
#Homepage      = "https://realpython.com/python-namespace-package/"
#"Source Code" = "https://github.com/realpython/data-repos/"
#Tutorial      = "https://realpython.com/python-namespace-package/"
#
#[project.optional-dependencies]
#dev  = ["black", "bump2version", "ruff", "interrogate", "isort"]
#test = ["black", "ruff", "interrogate", "pytest", "pytest-cov", "tox"]


[tool.licensecheck]
only_licenses = [
  "APACHE 2.0",
  "BSD",
  "BSD-3-CLAUSE",
  "ISC",
  "MIT",
  "PSF-2.0",
  "MOZILLA PUBLIC LICENSE 2.0 _MPL 2.0_",
  "THE UNLICENSE _UNLICENSE_",
]
using = "requirements:requirements.txt"
ignore_packages = [
  "playwright", # licensecheck does not detect the license, but it is Apache-2
]
# fail_packages = []
# ignore_licenses = []
# fail_licenses = []
# skip_dependencies = []

[tool.uv]
package = true

[tool.uv.sources]

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 80
indent-width = 4
target-version = "py313"


[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "ANN204", # Missing type annotation for special method
  "ANN206", # Missing return type annotation for class method
  "ANN401", # Dynamically typed expressions (Any) are disallowed
  "C901", # Function is too complex
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in __init__
  "D200", # One-line docstring should fit on one line
  "D202", # No blank lines allowed after function docstring
  "D205", # 1 blank line required between summary line and description
  "D211", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "E701", # Multiple statements on one line (colon)
  "EM101", # Exception must not use a string literal
  "EM102", # Exception must not use an f-string literal
  "ERA001", # Found commented-out code
  "F403", # Import * used; unable to detect undefined names
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "FBT003", # Boolean positional value in function call
  "FIX002", # Line contains TODO, consider resolving the issue
  "I001", # Import block is un-sorted or un-formatted
  "ICN001", # `numpy` should be imported as `np`
  "PGH003", # Use specific rule codes when ignoring type issues
  "PLC0414", # Import alias does not rename original package
  "PLC0415", # `import` should be at the top-level of a file
  "Q000", # Single quotes found but double quotes preferred
  "Q001", # Single quote multiline found but double quotes preferred
  "RET505", # Unnecessary `else` after `return` statement
  "RUF012", # Mutable class attributes should be annotated with ClassVar
  "S101", # Use of `assert` detected
  "S603", # `subprocess` call: check for execution of untrusted input
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  "TC001", # Move application import <x> into a type-checking block
  "TC002", # Move third-party import <x> into a type-checking block
  "TC003", # Move standard library import <x> into a type-checking block
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TD004", # Missing colon in TODO
  "TD005", # Missing issue description after `TODO`
  "TRY003", # Avoid specifying long messages outside the exception class
  "UP007", # Use `X | Y` for type annotations
  #"ANN003", # Missing type annotation for `**kwargs`
]

fixable = [ "ALL" ]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__main__.py" = [
  "PLW0603", # Using the global statement to update `x` is discouraged
  "T201", # print found
  "ANN202", # Missing return type annotation for private function
  "PLR0913", # Too many arguments in function definition
]
"tests/**/*.py" = [
  "S101", # Use of assert detected
  "PLR2004",
  "SLF001",
]

[dependency-groups]
dev = [
    "black>0",
    "pylint>0",
    "pyright>0",
    "pytest>0",
    "mypy>0",
    "types-pyyaml>0",
    "ruff>0",
    "isort>0",
    "bandit[toml]>0",
    "mkdocs>0",
    "mkdocs-typer2>0",
    "mkdocs-git-revision-date-plugin>0",
    "mkdocs-git-latest-changes-plugin>0",
    "mkdocs-document-dates>0",
    "mkdocstrings>0",
    "mkdocstrings-python>0",
    "mkdocs-github-changelog>0",
    "mkdocs-licenseinfo>0",
    "pymdown-extensions>0",
    "mkdocs-api-autonav>0",
    "mkdocsjsonschemaplugin>0",
    "mkdocs-awesome-nav>0",
    "jsonschema-markdown>0",
    "pyrefly>0",
    "pytest-cov>0",
    "pytest-asyncio>0",
    "pytest-run-changed>0",
    "docstr-coverage>0",
    "pip>0",
    "cyclonedx-bom>0",
    "pipdeptree>0",
    "licensecheck>0",
    "toml-cli>0",
    "basedpyright>0",
    "poethepoet>0",
    "tomlkit>0",
    "glom>0",
    "pytest-homeassistant-custom-component>=0.13.278",
]
